Railsガイドの記事についてlintを流して、推敲した

--- a/nmp300.hatenablog.com/entry/2020/08/23/120351.md
+++ b/nmp300.hatenablog.com/entry/2020/08/23/120351.md
@@ -9,89 +9,57 @@ URL: https://docs.koheitakahashi.com/entry/2020/08/23/120351
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613618631974
 Draft: true
 ---
-<!--
 # Railsガイド読みました
 ## はじめに
-- 研修期間で多くのレビューをいただくが、自分が全く知らないことが多いと感じた。
-- それはメソッドレベルの話や、その場合はこうした方が良いなどということなど。
-- Railsにおいて全く知らないということがまだまだたくさんあると感じたため、その全くわからないことを少なくしたいと考えて、体系的に勉強する必要があると考え、Railsガイドを読みました。
-- HTMLで読んでも良かったんですが、僕はdashから直接検索したかったのでdocset目当てで電子書籍版を購入して、そちらを読みました
-## 読んでみて
-- さすがRailsガイドということで、網羅されていて感動。
-- 何点かピックアップして感想を書きます。
-### 特に勉強になったところ
-#### Active Record クエリインターフェイス
-- `find_each`や`rewhere`、`default_scope`、`pluck`など知らないメソッドや機能を知ることができた。
-- また、楽観的ロック・悲観的ロックの話は曖昧だったので、ここでさらっとまとめられていて良かったです。
-- データベースのアクセスはあまり理解していなかったところでした。ただ、とても重要なところだと思うのでとても勉強になりました。
-#### Action View フォームヘルパー
-- いつもViewを書いていて、「こういうことしたいんだけど何かあるかなぁ」と行き当たりばったりで書いていたので、これを気にいろいろなヘルパーがあるのだと知れて助かりました。
-- また、`FormBuilder`クラスなどで`text_field`を再定義して、自分が使いやすいようにカスタマイズするという方法もあるのだと勉強になりました。
-#### Railsセキュリティガイド
-- セキュリティ関連については本当に暗くて、SQLインジェクション、クロスサイトスクリプトがなんとなく分かるというレベルでした。
-- ここでは、様々な攻撃方法があり、それに対してRailsがどのような対策をとっていて、開発者はどのようなことをすれば良いのかということが明示されていて有り難かったです。
-- Railsの凄さを知りました。
-- セキュリティについて、少しは意識できるようになったかなぁという感じです。
-### 全体的な感想
-- 全く知らないを少なくすることができたのではないかと思う。
-- 本当に大まかにRailsはこういうことができて、こんな風に書けばそういう設定ができるんだということが頭に入った気がしています。
-- インデックスを貼ることはできたのかと思います。
-- 必要になったら参照できるくらいにはなったのかと思います。
-- ただ、理解できなかった部分も多いです。そういうところは本当に目を通すだけという感じでした。
-    - zeitwerk・初期化プロセス・スレッドなどなど。
-- 知識のインデックスがあっても綺麗なコードを書けるようにはならないと思うので、コードを書く力はレビューを受けて徐々につけていきたいです。
--->
-
-# Railsガイド読みました
-## はじめに
-私は今研修期間で、シンプルなRailsアプリを開発してレビューをいただくという日々を送っています。  
-そのレビューをいただく中で、Railsについて全く知らないことが多いと感じました。  
-
+私は会社の研修期間中でして、シンプルなRailsアプリを開発してレビューをいただくという日々を送っています。  
+そのレビューをいただく中で、Railsについて「全く知らないことが多い」と感じました。  
 それはメソッドレベルの話だけではなく、「Railsではこの書き方が推奨されている」などということも含めてです。
 
-そのような全く知らないを少なくしていこうと思い、Railsガイド(日本語訳版)を読みました。  
+そのような「全く知らないを少なくしたい」と思い、今回Railsガイド(日本語訳版)を読みました。  
 
 [https://railsguides.jp:embed:cite]
 
-皆さんご存知の通り、ものすごい量なので、全てを理解しようとはせずに以下の記事で紹介されているインデックス読みを心がけました。  
+皆さんご存知の通りRailsガイドはものすごい量なので、全てを理解しようとはせずに以下の記事で紹介されているインデックスを作るという読み方を心がけました。  
 今は理解できないかも知れないけど、必要な時に参照できるくらいには頭に入れておこうという感じです。
 
 [https://blog.jnito.com/entry/2018/08/22/103318:embed:cite]
 
-Railsプログラマーとしては当然のことで、わざわざブログに書くことではないかもしれません。  
+Railsガイドを読むということは、Railsプログラマーとしては当然のことで、わざわざブログに書くことではないかもしれません。  
 しかし、自分の中ではなんとか成し遂げたという感じがあるので、この気持ちを残しておきたいと思いこの記事を書きました。
 
-ちなみにHTML版を読んでも良かったのですが、少し前にDashでRailsガイドを検索したいと思いdocset欲しさに電子書籍版を購入していたので、今回は電子書籍版を読み進めました。
-## 読んでみて
+ちなみに、少し前にDashでRailsガイドを検索したいと思いdocset欲しさに電子書籍版を購入していたので、今回は電子書籍版を読み進めました。
+## 読んでみた感想
 流石に全ての章に対して感想を書いていては埒があかないので特に勉強になった部分をピックアップして感想を書いていきたいと思います。  
 ### 特に勉強になったところ
 #### Active Record クエリインターフェイス
 私は`find`と`where`くらいしか覚えていなかったのですが、`find_each`・`rewhere`・`default_scope`・`pluck`など知らないメソッドや機能を知ることができて良かったです。  
-また、楽観的ロックと悲観的ロックについては曖昧だったため、さらっとまとめられていて改めて理解することができました。
+また、楽観的ロックと悲観的ロックについては曖昧だったため、その部分にも言及されていて改めて理解できました。
 
 正直な話、データベースへのアクセス・検索についてはあまり理解していなかったところでした。  
-しかし、とても重要なところだと思うのでこれを機に学ぶことができて良かったと思いました。
+しかし、とても重要なところだと思うのでこれを機にある程度学ぶことができて良かったです。
 #### Action View フォームヘルパー
-いつもViewを書いていて、「こういうことをしたいんだけど、どんなヘルパーがあるかなぁ」と都度都度調べて、行き当たりばったりな感じがありました。  
-しかし、これを機にどんなヘルパーがあるのかが分かり、ヘルパーを調べるときの目処が立った感じがあります。
+いつもViewを書いていて「こういうことをしたいんだけど、どんなヘルパーがあるかなぁ」と、あたりをつけることができずに都度調べて実装するという行き当たりばったりな感じがありました。  
+しかし、これを機にどんなヘルパーがあるのかが分かり、ヘルパーを調べるときのあたりをつけやすくなったと思います。
 
-また、自分で`FormBuilder`クラスを定義し、その中で`text_field`などを再定義することで、自分が使いやすいようにカスタマイズするということもやって良いのだと新しい発見がありました。
+また、自分で`FormBuilder`クラスを定義し、その中で`text_field`などを再定義することで自分が使いやすいようにヘルパーをカスタマイズするということをやって良いのだと新しい発見がありました。
 #### Railsセキュリティガイド
 セキュリティ関連については本当に暗くて、SQLインジェクション・クロスサイトスクリプティングがなんとなく分かるというレベルでした。  
-ここでは、様々な攻撃方法があり、それに対してRailsがどのような対策をとっていて、開発者はどのようなことをすれば良いのかということが明示されていてとても有り難かったです。
+ここでは、様々な攻撃方法があり、それに対してRailsがどのような対策をとっていて開発者はどのようなことをすれば良いのかということが明示されていてとても有り難かったです。
 
 セキュリティについて、ほぼ意識せずともRailsがやってくれていると知り、改めて素晴らしいと感じました。  
-セキュリティ関連については、まだまだ知識がないと思いますが、少しは理解できるようになったかなという感じです。
+セキュリティ関連については、まだまだ知識がないのですが、少しは理解できるようになったかなという感じです。
 ### 全体的な感想
 今回のRailsガイドを読む目的であった「Railsについて全く知らないことを少なくする」ことはある程度達成できたという感じがします。  
-大まかではありますが、Railsはこういうことができるんだということが理解でき、それらについて頭の中でインデックスを作ることができたような感じがしています。
+大まかにRailsでできることがなんとなく理解でき、それらについて頭の中でインデックスを作ることができたような感じがしています。
 
 一方で、理解できなかった部分も多いです。  
-zeitwerk・初期化プロセス・スレッドなどなどが理解できず、そういった部分に関しては本当に目を通すだけという感じで読み進めました。
+zeitwerk・初期化プロセス・スレッドなどは理解できず、そういった部分に関しては本当に目を通すだけという感じで読み進めました。
 
-ただ、そのような部分であっても、必要になった時に参照できるくらいのインデックスを頭の中に作ることはできたので、理解できた部分、理解できなかった部分共に、都度都度参照し直してRailsに対する理解を深めていければと思います。
+ただ、そのような部分であっても必要になった時に参照できるくらいのインデックスを頭の中に作ることはできたと思いあmす。
+
+そのため、理解できた部分・理解できなかった部分共に、都度該当する部分を参照し直してRailsに対する理解を深めていければと思います。
 ## 最後に
-今回は、まとまった時間が取れたのでRailsガイドを読んでみましたが、総じて、Railsでどんなことができるのかということが掴めてきて、良かったと思いました。
+今回はまとまった時間が取れたのでRailsガイドを読んでみましたが、総じてRailsでどんなことができるのかということが掴めて良かったです。
 
 しかし、「Railsでこういうことができる」という知識があっても綺麗なコードを書けるようにはならないと思うので、コードを書く力は今後レビューを受けて徐々につけていきたいと思っています。
 
