Railsガイドの記事の誤字を修正

--- a/nmp300.hatenablog.com/entry/2020/08/23/120351.md
+++ b/nmp300.hatenablog.com/entry/2020/08/23/120351.md
@@ -10,7 +10,7 @@ EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006
 ---
 
 ## はじめに
-私は今努めている会社では研修期間中でして、シンプルなRailsアプリを開発してレビューをいただくという日々を送っています。  
+私は今勤めている会社では研修期間中でして、シンプルなRailsアプリを開発してレビューをいただくという日々を送っています。  
 そのレビューをいただく中で、Railsについて「全く知らないことが多い」と感じました。  
 それはメソッドレベルの話だけではなく、「Railsではこの書き方が推奨されている」などということも含めてです。
 
