--- a/nmp300.hatenablog.com/entry/2020/09/01/202443.md
+++ b/nmp300.hatenablog.com/entry/2020/09/01/202443.md
@@ -1,33 +1,36 @@
 ---
-Title: ■
+Title: Sendagaya.rb#321 参加レポート
+Category:
+- Programmer
+- イベント参加レポート
 Date: 2020-09-01T20:24:43+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/09/01/202443
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613622609205
-Draft: true
 ---
-# Sendagaya.rb #321 参加レポート
+
 ## はじめに
 以前は毎週参加していたSendagaya.rbですが、新生活が始まり心身の余裕がなく、ここ1・2ヶ月は参加しておりませんでした。  
 しかし、新生活や社内の研修にも少しずつ慣れてきて、心身の余裕ができ始めたので今回参加させていただきました。
-[https://sendagayarb.doorkeeper.jp:embed:cite]
+[https://sendagayarb.doorkeeper.jp/events/110912:embed:cite]
 
-参加レポートということで話題に挙がったことと、自分の感想をまとめます。
+参加レポートとして話題に挙がったことと、自分の感想をまとめます。
 ## 話された内容
 参加者の方々が持ち寄ったテーマについてみんなで意見を交換し合うという感じです。  
 話された内容をピックアップして以下に書きます。
 ### JavaScriptの`reduce`について
-[@tkawa](https://twitter.com/tkawa)さんが持ち寄り、以下の記事について話されました。
+[@tkawa](https://twitter.com/tkawa)さんから以下の記事を紹介していただきました。
 [https://qiita.com/standard-software/items/3254c19ed5229f3aba9a:embed:cite]
 
 私はそもそも「ループの回数が分からなくて困るケース」ってあるのかなぁと疑問でした。  
 記事を読んでも、その疑問は拭えず…。
+
 一方で、やはりデバッグのときに処理を差し込めないから、少しだけデバッグが厄介になるかもしれないという意見も上がりました。
 ### JavaScriptの怖い話
 [@sanfrecce_osaka](https://twitter.com/sanfrecce_osaka)さんの体験談。
 
 これはその場に衝撃が走った内容でした。
 
-実は…**Array.prototype.forEach()は、emptyをスキップします**
+実は…**`forEach`は、emptyをスキップします**
 
 つまりどういうことかというと、以下のように配列を定義すると`empty`というモノが含まれる配列が作成されます(私は`empty`の存在も初めて知りました)。
 
@@ -53,7 +56,7 @@ console.log(array1.length);
 //=> 3
 ```
 
-まあ、なんて怖い…。
+`length`を信じられないなんて…まあ、怖い…。
 
 ## 感想
 久しぶりの参加でしたが、とても楽しかったです。  
