『パーフェクトRails』読了記事を推敲

--- a/nmp300.hatenablog.com/entry/2020/09/02/212346.md
+++ b/nmp300.hatenablog.com/entry/2020/09/02/212346.md
@@ -5,98 +5,10 @@ URL: https://docs.koheitakahashi.com/entry/2020/09/02/212346
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613623063161
 Draft: true
 ---
-<!--
-1. その本を読もうと思ったきっかけ。読む前の自分の体験・考え
-2. どうしてこの本を読んだか
-3. 本の大まかなあらすじ
-4. 1番良いと思ったこと・印象に残ったところ
-5. どうして良いと思ったか
-6. その本を読んで学んだこと
-
-# 『パーフェクト Ruby on Rails【増補改訂版】』
-## はじめに
-- Railsプログラマーとして生を受けてから早2ヶ月。研修期間ではあるが、Railsのことを全く知らないことに気づいた。
-- Railsの基本的なことはもちろん、Railsガイドよりも実務によったことも学びたい
-- そう思って本書をとった
-## 本書の章立て
-> 第1章 Ruby on Railsの概要
-> 第2章 Ruby on RailsとMVC
-> 第3章 押さえておきたいRailsの基本機能
-> 第4章 フロントエンドの開発手法
-> 第5章 Rails標準の機能を活用して素早く機能実装する
-> 第6章 Railsアプリケーション開発
-> 第7章 Railsアプリケーションのテスト
-> 第8章 Railsアプリケーション拡張
-> 第9章 コードの品質を上げる
-> 第10章 コンテナを利用したRailsアプリケーションの運用
-> 第11章 複雑なドメインを表現する
-> 第12章 複雑なユースケースを実現する
-> 第13章 複雑なデータ操作を実現する
-## 各章ごとの感想
-> 第1章 Ruby on Railsの概要
-- バージョン指定してインストールやrails statusなんて初めて知った。
-> 第2章 Ruby on RailsとMVC
-- variantsや`time_ago_in_words`・`number_with_delimiter`なども初めて知った。使ってみたいよくが高まる
-> 第3章 押さえておきたいRailsの基本機能
-- 正直なところRackはリクエストとレスポンスをRailsが扱いやすいようによしなに変換してくれるんだなという程度の理解しかなかった
-- Rack以前の世界の話から、Rackミドルウェアを作るという話まであって、少しRackについて理解できた気がする
-- また、Early HintsやCSPなどについては初めて知ったので、ここで知ることができて良かった。
-    - Early Hintsはレスポンスを送る前にヒントを出して、アセットのダウンロードを早めにしてもらうことでページ描画までの時間を短縮するための方法だと理解
-    - CSPは安全にJavaScriptを実行するための仕組みと理解
-> 第4章 フロントエンドの開発手法
-- stimulusのことを知らなかったので、そこが丁寧に書かれていて分かりやすかったです。ただ書けるようになった訳ではないので手を動かさなければという感じ。
-> 第5章 Rails標準の機能を活用して素早く機能実装する
-- Active Job・Active Storage・Action Miler・Action Mailbox・Action TextなどのRailsの機能の使い方が紹介されている章
-- 特にAction MailboxについてはRailsガイドにあまり詳しく載ってなかった記憶があるので、使われ方があまりイメージできていませんでした。
-- 本書では詳しく載っていたので有り難かったです。
-> 第6章 Railsアプリケーション開発
-- Railsでイベント管理アプリを作るならどのように作っていくか、具体的なコードをと作るときの流れがまとめられている章
-- 特に意識したいと思ったことは以下。
-> その機能を学ぶ際は、単純に丸暗記するのではなく「なぜこのような機能があるのか」を積極的に調べるようにしましょう。Railsが提供している機能の多くは、Webアプリケーション開発全般で使えるベストプラクティスです。
-> ウェブで検索したやり方を深く考えずにそのまま使うようでは経験値は増えにくいです。大事なのは常に複数の選択肢があることを念頭に置いて、このやり方がベストなのか?なぜこの実装にするのか?を考えることです。
-> P344より
-- これは肝に命じておきたい。
-> 第7章 Railsアプリケーションのテスト
-- 自分は何でもかんでもテストしたくて、システムテストでも書き過ぎてしまいたくなるので、system testでできること、model testでできることを意識して書きたいと思いました。
-- また、本章ではシステムテストでしかできないことが以下のようにまとめられていました。
-> - システムテストでしかできないこと
-    - ブラウザ上でJavaScriptの動作まで含めて確認
-    - フォームへ値を入力して登録する時の動作を確認
-    - 失敗した時の画面スクリーンショットを撮る
-- これは意識してテストを書きたいです。
-> 第8章 Railsアプリケーション拡張
-- 外部のライブラリを使って機能を拡張していくお話
-- 本章の内容はもちろん勉強になりましたが、コラムとしてgemの選び方についても触れられているのが有り難かったです。
-- 自分はどういう基準でgemを使ったら良いかというのがまだわからないので、それが文字になっててくれるのは助かります。
-> 第9章 コードの品質を上げる
-- 実際のRailsを用いた開発現場で使われることが多いgem・ツールのお話。
-- 私は現場での開発経験がほとんどないので、どのようなgem・ツールが使われているのかがまとめられていて、とても助かりました。
-- なんというか、これの使い方や概要を覚えておけば良いのかなという心構えみたいなものができました。
-> 第10章 コンテナを利用したRailsアプリケーションの運用
-- 名前こそ聞いたことはあっても実際に触ったことがなかったDockerの概要と実際にどのように使われているのか、設定を書くのかということが記載されていて勉強になりました。
-- とりあえずDockerとはスクリプト実行していくことで、環境を構築するものだと理解。
-- そのおかげで同じ環境が手軽にどこでも手軽に構築しやすくなったと理解。
-> 第11章 複雑なドメインを表現する
-- 複雑なドメインに対応するために、値に関するロジックをまとめた値オブジェクトを作ったり、サービスオブジェクトを作ったりして対応しようというお話。
-- サービスオブジェクトは言葉としては聞いたことがあったのですが、どういうものかはイマイチ理解していなかったので、勉強になりました。
-- 複数のオブジェクトを組み合わせたロジックを実装するための、状態を持たないクラスのことなんですね。
-> 第12章 複雑なユースケースを実現する
-- 複雑なユースケースに対応するために、フォームオブジェクトやプレゼンターを使ってみようという内容。
-- ここはやったことがあったので、どういうことか実感を伴って理解することができました。
-> 第13章 複雑なデータ操作を実現する
-- 正直なところ`concern`のことはあまり理解できませんでした。
-- これから実際にコードを書く中で理解していけたらと思います。
-## 全体的な感想
-- 基本的なことから実務的なところまで幅広くまとめられた本でした。
-- 基本的なところだけど、実は知らなかったということも結構あり、勉強になりました。
-- 10章~13章は特に勉強になりました。
-- 複雑な問題にどのようにアプローチしていけば良いのか、そのためにどのようなRailsの機能を使って、どのようにコードを書いていけば良いのかということが知れてとても勉強になりました。
--->
-
 # 『パーフェクト Ruby on Rails【増補改訂版】』読了しましたー
 ## はじめに
 Railsプログラマーとして生を受けてから早2ヶ月。  
-今はまだ研修期間ではありますが、日に日に「自分ってRailsのこと何も知らないんだなぁ」と気づくことが多くなりました。
+まだ研修期間ではありますが、「私はRailsのこと何も分からない」ということを思い知ります。
 
 「Railsの基本的なところはもちろん復習したい」、そして「Railsガイドよりも現場に寄った内容も学びたい」と思い、本書を手に取りました。
 
@@ -132,9 +44,9 @@ Railsプログラマーとして生を受けてから早2ヶ月。
 ### 第1章 Ruby on Railsの概要
 バージョンを指定してインストールすることや、`rake stats`などは初めて知りました。
 ### 第2章 Ruby on RailsとMVC
-第1章に引き続き、初めて知ったことが多かったです(`variants`や`time_ago_in_words`、`number_with_delimiter`などなど)。
+第1章に引き続き、初めて知ったことが多かったです(`variants`や`time_ago_in_words`、`number_with_delimiter`など)。
 
-特に`time_ago_in_words`は使いどころが多そうだなぁと思いました。
+特に`time_ago_in_words`は使いどころが多そうだと感じ、知れて良かったです。
 ### 第3章 押さえておきたいRailsの基本機能
 正直なところ、RackについてはアプリケーションサーバーとRailsの間に立ってリクエストとレスポンスをRailsが扱いやすいように変換してくれるモノだという程度の理解しかしてませんでした。
 
@@ -147,19 +59,20 @@ CSPは安全にJavaScriptを実行するための仕組み。
 
 と、それぞれ理解しました。
 ### 第4章 フロントエンドの開発手法
-stimulusのことを知らなかったので、使い方が丁寧にのっており分かりやすかったです。  
-ただ、実際に書けるようになったわけではないので、stimulusを使う時になったら改めて動かしてみて理解していきたいです。
+stimulusのことを知らなかったのですが、使い方が丁寧に書かれており分かりやすかったです。
+  
+ただ、実際にstimulusを用いてコードを書けるようにはなっていないため、stimulusを使う時になったら改めて動かしてみて理解していきたいです。
 ### 第5章 Rails標準の機能を活用して素早く機能実装する
 Active Job・Active Storage・Action Miler・Action Mailbox・Action TextなどのRailsの機能の使い方が紹介されている章でした。
 
 特に参考になったのは、Action Mailboxについての説明です。  
-Railsガイドにあまり詳しく載ってなかったような気がしていて、使われ方があまりイメージできないでいました。  
+Railsガイドにあまり詳しく載ってなかったような気がします。そのため、使われ方があまりイメージできていませんでした。  
 
-本章では、実際にどのように書くのかが記載されており、Action Mailboxの使い方・実装がイメージすることができました。
+本章では、実際にどのように書くのかが記載されており、Action Mailboxの使い方・実装がイメージできました。
 ### 第6章 Railsアプリケーション開発
 Railsでイベント管理アプリを作るならどのように作っていくかということが、具体的なコードと共に説明されていてる章でした。
 
-特に印象に残ったのは、本章の最後の以下の内容です。
+特に印象に残ったのは、本章の最後に書かれていた以下の内容です。
 
 > その機能を学ぶ際は、単純に丸暗記するのではなく「なぜこのような機能があるのか」を積極的に調べるようにしましょう。Railsが提供している機能の多くは、Webアプリケーション開発全般で使えるベストプラクティスです。
 >
@@ -167,54 +80,52 @@ Railsでイベント管理アプリを作るならどのように作っていく
 >
 > P344より
 
-度々、上記のような機能の背景にあることを理解せずにスッ飛ばしている時があるので、折に触れてこの心構えを思い出していきたいです。
+度々、上記のような「機能の背景」を理解せずにスッ飛ばしている時があるので、折に触れてこの心構えを思い出していきたいです。
 ### 第7章 Railsアプリケーションのテスト
-私は、なんでもかんでもテストしたくなってシステムテストを書きすぎてしまいます。  
-system testでできること、model testでできることを意識して書きたいと思いました。
-
-また、system testでできることについて、本章では以下のようにまとめられていました。
+system testでできることについて、本章では以下のようにまとめられていました。
 
 - ブラウザ上でJavaScriptの動作まで含めて確認
 - フォームへ値を入力して登録する時の動作を確認
 - 失敗した時の画面スクリーンショットを撮る
 
-これを意識してテストを書いていきたいと思いました。
+私は、なんでもかんでもテストしたくなってシステムテストを書きすぎてしまいます。  
+そのたえ、上記のようなsystem testでできること、model testでできることを意識して書きたいと思いました。
 ### 第8章 Railsアプリケーション拡張
 この章は、外部ライブラリを使ってRailsの機能を拡張していくという内容でした。
   
 内容はもちろん勉強になりましたが、コラムとしてgemの選び方についても触れられているのが有り難かったです。  
-自分はどういう基準でgemを使ったら良いかというのがまだ分からなかったので、それがまとめられていたのは助かりました。
+自分はどのような基準でgemを使ったら良いかということが、まだ分からなかったので、それがまとめられていたのは助かりました。
 ### 第9章 コードの品質を上げる
 Railsを用いた開発現場では実際にどのようなgemやツールが使われているのかが、まとめられている章でした。
 
-私はまだ現場での開発経験がほとんどないので、ここら辺のgemやツールを知っておけば良いのかな、という心構えができました。
+私はまだ現場での開発経験がほとんどないので、「本章で紹介されているgemやツールを知っておけば良いのかな」という心構えができました。
 ### 第10章 コンテナを利用したRailsアプリケーションの運用
-名前こそ多く耳にするDockerですが、私は触ったことがありませんでした。  
+名前こそ多く耳にするDockerですが、触ったことがありませんでした。  
 本章を読むことで、Dockerがどのように使われているのか、どのように設定を書くのかということの一端を知ることができて良かったです。
 
 Dockerとは、スクリプトを実行していくことで環境を構築していくツールだと理解しました。  
-しかし、触ってみないと分からないので必要になったときに改めて学びたいです。
+しかし、触ってみないと分からないので必要となったときに改めて学びたいです。
 ### 第11章 複雑なドメインを表現する
-複雑なドメインに対応するために、値に関するロジックをまとめた値オブジェクトを作ったり、サービスオブジェクトを作ったりすることが述べられていた章でした。
+複雑なドメインに対応するために、値に関連するロジックをまとめた値オブジェクトを作ったり、サービスオブジェクトを作ったりすることが述べられていた章でした。
 
 サービスオブジェクトとは、複数のオブジェクトを組み合わせたロジックを実装するための状態を持たないクラスと理解しました。  
-言葉としては聞いたことがあったのですが、どういうものかはイマイチ理解していなかったので、勉強になりました。
+言葉としては聞いたことがあったのですが、どのようなものかはイマイチ理解していなかったので、勉強になりました。
 ### 第12章 複雑なユースケースを実現する
 複雑なユースケースに対応するために、フォームオブジェクトやプレゼンターを使うという内容でした。
 
-この章の内容は、私が実際に直面した問題だったので実感を伴って理解することができた感じがあります。
+この章の内容は、私が実際に直面した問題だったので実感を伴って理解できた感じがあります。
 ### 第13章 複雑なデータ操作を実現する
 複雑でコード全体に散らばっているロジックを、`concern`を使うことでまとめるという内容でした。
 
-正直なところ、`concern`については「何となくこういうモノか」というのは分かったのですが、具体的なことは理解することができませんでした。  
+正直なところ、`concern`については「何となくこういうモノか」というのは分かったのですが、具体的なことは理解できませんでした。  
 これから実際にコードを書く中で理解していけたらと思います。
 ## 全体的な感想
 基本的なことから実務的なところまで幅広くまとめられた本で、大変勉強になりました。  
-基本的なところであっても実は知らなかったということが、多くて良い復習になりました。
+基本的なところであっても実は知らなかったということが多く、良い復習になりました。
 
-特に、10~13章の内容が自分にとって有り難かったです。
+特に、10~13章の内容が自分にとってとても役に立ちました。
 
 現実の複雑な問題にどのようにアプローチしていけば良いのか、そのためにどのようなRailsの機能を使って、どのようにコードを書いていけば良いのかということを知ることができました。
 
-ただ、10~13章は字面では理解できましたが実感を伴って理解できたとは言えません。  
-サービスオブジェクトや`concern`など、実際に必要になった時に、該当する章を読み返したいと思いました。
+ただ、10~13章の内容は字面では理解できましたが実感を伴って理解できたとは言えません。  
+サービスオブジェクトや`concern`などが、実際に必要となった時に読み返したいと思いました。
