『パーフェクトRails』読了記事を投稿

--- a/nmp300.hatenablog.com/entry/2020/09/02/212346.md
+++ b/nmp300.hatenablog.com/entry/2020/09/02/212346.md
@@ -1,18 +1,23 @@
 ---
-Title: ■
+Title: 『パーフェクト Ruby on Rails【増補改訂版】』を読了しました
+Category:
+- Programmer
+- 読書ノート
 Date: 2020-09-02T21:23:46+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/09/02/212346
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613623063161
-Draft: true
 ---
-# 『パーフェクト Ruby on Rails【増補改訂版】』読了しましたー
+
 ## はじめに
 Railsプログラマーとして生を受けてから早2ヶ月。  
-まだ研修期間ではありますが、「私はRailsのこと何も分からない」ということを思い知ります。
+まだ研修期間ではありますが、日々「私はRailsのこと何も分からない」ということを思い知ります。
 
 「Railsの基本的なところはもちろん復習したい」、そして「Railsガイドよりも現場に寄った内容も学びたい」と思い、本書を手に取りました。
 
 本書を読んで学んだことと感想をまとめたいと思います。
+
+<div class="booklog_html"><table><tr><td class="booklog_html_image"><a href="https://www.amazon.co.jp/dp/B08D3DW7LP?tag=booklogjp-default-22&linkCode=ogi&th=1&psc=1" target="_blank"><img src="https://m.media-amazon.com/images/I/51hCV4olz-L._SL160_.jpg" width="119" height="150" style="border:0;border-radius:0;" /></a></td><td class="booklog_html_info" style="padding-left:20px;"><div class="booklog_html_title" style="margin-bottom:10px;font-size:14px;font-weight:bold;"><a href="https://www.amazon.co.jp/dp/B08D3DW7LP?tag=booklogjp-default-22&linkCode=ogi&th=1&psc=1" target="_blank">パーフェクト Ruby on Rails　【増補改訂版】</a></div><div style="margin-bottom:10px;"><div class="booklog_html_author" style="margin-bottom:15px;font-size:12px;;line-height:1.2em">著者 : <a href="https://booklog.jp/author/%E3%81%99%E3%81%8C%E3%82%8F%E3%82%89%E3%81%BE%E3%81%95%E3%81%AE%E3%82%8A" target="_blank">すがわらまさのり</a></div><div class="booklog_html_manufacturer" style="margin-bottom:5px;font-size:12px;;line-height:1.2em">技術評論社</div><div class="booklog_html_release" style="font-size:12px;;line-height:1.2em">発売日 : 2020-07-25</div></div><div class="booklog_html_link_amazon"><a href="https://booklog.jp/item/1/B08D3DW7LP" style="font-size:12px;" target="_blank">ブクログでレビューを見る»</a></div></td></tr></table></div>
+
 ## 本書の章立て
 本書は以下のような章立てで構成されていました。
 > 第1章 Ruby on Railsの概要
@@ -40,13 +45,14 @@ Railsプログラマーとして生を受けてから早2ヶ月。
 > 第12章 複雑なユースケースを実現する
 >
 > 第13章 複雑なデータ操作を実現する
+
 ## 各章ごとの感想
 ### 第1章 Ruby on Railsの概要
 バージョンを指定してインストールすることや、`rake stats`などは初めて知りました。
 ### 第2章 Ruby on RailsとMVC
 第1章に引き続き、初めて知ったことが多かったです(`variants`や`time_ago_in_words`、`number_with_delimiter`など)。
 
-特に`time_ago_in_words`は使いどころが多そうだと感じ、知れて良かったです。
+特に`time_ago_in_words`は使いどころが多そうだと思いました。知れて良かったです。
 ### 第3章 押さえておきたいRailsの基本機能
 正直なところ、RackについてはアプリケーションサーバーとRailsの間に立ってリクエストとレスポンスをRailsが扱いやすいように変換してくれるモノだという程度の理解しかしてませんでした。
 
