「エンジニアの時間管理術 読了』を推敲・修正

--- a/nmp300.hatenablog.com/entry/2020/09/13/144443.md
+++ b/nmp300.hatenablog.com/entry/2020/09/13/144443.md
@@ -6,14 +6,15 @@ EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006
 Draft: true
 ---
 
-# 『エンジニアの時間管理術』読みました
+# 『エンジニアのための時間管理術』読みました
 ## はじめに
 研修中ではありますが、エンジニアとして業務に当たっていく中で「中々開発速度が上がらない」と思うようになりました。
 
-純粋にコードを書くのが早くないということも要因なのですが、そもそもそれ以外の点で「時間の使い方や業務スケジュール、仕事の進め方がまずいのかもしれない」と考え始めました。
+純粋にコードを書くのが早くないということも要因なのですが、そもそもそれ以外の点で「時間の使い方や業務スケジュール、仕事の進め方がまずいのでは」と考え始めました。
 
 そこで、「自分の時間管理・仕事の進め方」を見直したいと思い、本書を手に取りました。  
 早速実践できたこともあるので、以下に学んだことや感想をまとめたいと思います。
+
 ## 本書の章立て
 本書は以下のような章立てで構成されていました。
 
@@ -64,7 +65,7 @@ Draft: true
 集中しやすい環境を作りや、仕事の進め方、割り込みへの対処が書かれた章でした。
 
 私自身、業務に当たっていて「割り込み」というものを意識したことがなかったため、これは新しい発見でした。  
-そもそも、割り込みが頻繁に発生するような状況に置かれていないということもあるのですが、本書を読むことで自分の中の仕事に対するラベルに「割り込み」というラベルが追加された感じがあります。
+そもそも、割り込みが頻繁に発生するような状況に置かれていないということもありますが、本書を読むことで自分の中の仕事に対するラベルに「割り込み」というラベルが追加された感じがあります。
 
 本章では、割り込みへの対応は以下のような順序でやることと述べられていました。
 
@@ -72,66 +73,69 @@ Draft: true
 > - 記録する
 > - 実行する
 
-割り込みが頻発する状況になったら参考にさせていただきたいと思いました。
+割り込みが頻発する状況に置かれたら、本章の内容を思い出して実践したいと考えました。
 ### 第3章 ルーチン
-ルーチンは「何のために」、「どのように」作成しするのか。  
-そもそも、良いルーチンとは何かということについてまとめられていた章でした。
+ルーチンは「何のために」・「どのように」作成しするのか。そもそも、「良いルーチンとは何か」ということについてまとめられていた章でした。
 
-本章では、「ルーチンとは最初だけ考えて、あとは考えないようにするためのもので、一度作成すれば、それについては脳のリソースを割かなくて良くなる」ということが述べられておりました。
+本章では、ルーチンとしては以下のように述べられていました。
+
+「ルーチンとは、最初だけ考えて、後は考えないようにするためのもの」  
+「一度作成すれば、それについては脳のリソースを割かなくて良くなる」  
+ということが述べられておりました。
 
 これについて、まさしくその通りだと実感しました。  
-私自身が脳のメモリが少ない人なので、色々なことに頭を使ってしまうと、あまり良い判断ができなくなってしまうということが多々あります。
+私自身が脳のメモリが少ないので、色々なことに頭を使ってしまうと、あまり良い判断ができなくなってしまうということが多々あります。
 
 本書で述べられている「仕事の手間が省け、決断を下す時間が短くなるもの」を見つけてルーチン化したいと思いました。  
 まずは業務に入った時にやっていることをルーチン化したいと思いました。
 ### 第4章 サイクルシステム
 筆者が考案し、実践しているサイクルシステムについて、概要が説明されていた章でした。
 
-そもそも、サイクルシステムは、日々割り込みややるべきことが多い業務時間の中で、「やるべき作業を見失わないようにするため」に考案されたシステムということでした。
+そもそも、サイクルシステムとは、日々割り込みや、やるべきことが多い業務時間の中で「やるべき作業を見失わないよう」に考案されたということでした。
 
 具体的な方法は以降の章で説明されていますが、作業リスト・今日のスケジュール・長期的な目標という3つのツールを使用していくというものでした。
 ### 第5章 サイクルシステム: 作業リストとスケジュール
 サイクルシステムの重要なツールである、作業リストとスケジュールについてまとめられた章でした。
 
-具体的な手順としては、出社したら以下のようなことをしていきます。
+具体的な手順としては、出社したら以下のような流れが紹介されていました。
 
 1. やるべき作業を書き出す。この時、所要時間も書いておきます。
-2. 1で作成された「作業リスト」の1つ1つの作業に対して優先順位をつけます。
-3. 優先順位と所要時間を勘案してスケジュールを立てます。
-4. 作業が終わったものから横線を引いて、その作業を消していきます。
-5. 就業時間の30分前に残っている作業をピックアップして、それに対してどのような対応をするのかを決めます。
+1. 1で作成された「作業リスト」の1つ1つの作業に対して優先順位をつけます。
+1. 優先順位と所要時間を勘案してスケジュールを立てます。
+1. 作業が終わったものから横線を引いて、その作業を消していきます。
+1. 就業時間の30分前に残っている作業をピックアップして、それに対してどのような対応をするのかを決めます。
 
-※ ここで、割り込みについては、「この時間は割り込みに当てる」という時間を作っておき、その中で対応するようにします。
+※ ここで、割り込みについては「この時間は割り込みに当てる」という時間を作っておき、その中で対応するようにします。
 
 上記のようなことが、サイクルシステム(作業リストとスケジュール)を用いた時間管理術でした。
 
 一見目新しいものはないように思えます。  
 しかし、後述しますが、私は実際にやってみて「良い感じかもしれない」という感覚がありました。
 ### 第6章 サイクルシステム: カレンダーの管理
-仕事とプライベートのカレンダーを一つにまとめようということが述べられていた章でした。
+仕事とプライベートのカレンダーを1つにまとめようということが述べられていた章でした。
 
-私もこれは実践したいと思ったのですが、イマイチGoogleカレンダーの複数人共有に慣れずにプライベートの予定が会社の人にバレてしまうのではないかと恐れて、実践できないでいます…。
+私もこれは実践したいと思ったのですが、イマイチGoogleカレンダーの複数人共有に慣れずにおります。  
+そのため、プライベートの予定が会社の人にバレてしまうのではないかと恐れて、実践できないでいます…。
 ### 第7章 サイクルシステム: 人生の目標
 2年後、5年後、10年後、引退後などなど、長期的な目線で見た時の目標を持って、それに向かえるようにしようと章でした。
 
-私はまだまだぼんやりしているので、もう少し業務に慣れてきて、エンジニアがどのような職業なのかということが分かり始めたら考えて文書化したいです。
+私はまだまだぼんやりしているので、もう少し業務に慣れてきて、エンジニアがどのような職業なのかということが分かり始めたら考えて文字にしたいです。
 ### 第8章 優先順位
 タスクやプロジェクトに対して、どのようにして優先順位をつけていくのかということがまとめられた章でした。
 
-本章の内容としては、顧客が優先する順位を割り振ること。そして、タスクやプロジェクトを達成した時の効果(大・小)と困難さ(難・易)の2つの軸で見た時に効果が大きく・容易いモノからこなしていくというものでした。 
+本章の内容としては、顧客が優先する順位を割り振ること。そして、タスクやプロジェクトを達成した時の効果(大・小)と困難さ(難・易)の2つの軸で見た時に効果が大きく・易しいモノからこなしていくというものでした。 
 しかし、上記のようなタスクはほとんどないので、その場合は効果が大きく、難しいモノをやっていく方が良いと述べられていました。
 
-この章は、顧客の方を意識する機会が私にはまだないので、あまり実感を持って理解することはできませんでした。  
+この章は、顧客の方を意識する機会が私にはまだないので、あまり実感を持って理解できませんでした。  
 「そういうものなのか」と頭に入れておきたいと思いました。
 ### 第9章 ストレスの管理
-この章では、休暇の取り方などが記載されている点でした。  
-本書の独創的な点だと思い、興味深く読んでおりました。
+この章では、休暇の取り方などが記載されている点でした。本書の独創的な点だと思い、興味深く読んでおりました。
 
 確かに、本章のように休暇をとるまでにやるべきことが明文化されていることは、気兼ねなく休暇を過ごす上で大切なことだと感じました。
 ### 第10章 電子メールの管理
 筆者は受信トレイを空にすることを目指していて、メールを「読まずに削除するもの」・「読んで処理するもの」・「読んで実行して削除するもの」と分けているというお話でした。
 
-こちらに関して、私はメールを使う機会がそこまで多くなかったのですが、「そのようなメール管理方法があるんだなー」と頭の隅に置いておこうと思いました。
+こちらに関して、私はメールを使う機会がそこまで多くなかったのですが「そのようなメール管理方法があるんだなー」と頭の隅に置いておこうと思いました。
 ### 第11章 時間の浪費
 費やした時間に対して、利益率が低いものは総じて時間の浪費になるというお話でした。
 
@@ -158,7 +162,7 @@ Draft: true
 
 特に、「サイクルシステム」が自分の中で役に立ったという感じがあります。
 
-こちらは実践してみました。  
+こちらは以下のように実際に実践してみました。  
 まず、業務に入って10分くらいでやるべきことを洗い出し、優先順位と作業見積もり時間をつけて、  
 会議などのスケジュールと合わせて、1日のスケジュールを立て、それを実行していくという流れです。
 
