blogsync pull nmp300.hatenablog.com

--- a/nmp300.hatenablog.com/entry/2020/09/09/211736.md
+++ b/nmp300.hatenablog.com/entry/2020/09/09/211736.md
@@ -1,15 +1,23 @@
 ---
-Title: ■
+Title: Sendagaya.rb#328 参加レポート
+Category:
+- Programmer
+- イベント参加レポート
 Date: 2020-09-09T21:17:36+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/09/09/211736
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613625868054
-Draft: true
 ---
-# Sendagaya.rb#328 参加レポート
+
 ## はじめに
 先週に引き続き、今週もSenadagaya.rbに参加させていただきました。
 
 今回は短くはなりますが、参加した感想などをまとめます。
+
+
+[https://sendagayarb.doorkeeper.jp/events/111280:embed:cite]
+
+
+
 ## 内容
 今回は、自己紹介 → Ruby Kaigi Takeoutの話題 → りんごジュース抽選プログラムをみんなで書こうという内容でした。
 
@@ -45,7 +53,7 @@ drawing = DrawingMachine.new
 drawing.draw(people)
 ```
 
-命名や処理が納得いかない部分が多いのですが、時間がなかったということでお目こぼしをお願いしますmm
+命名や処理について、納得いかない部分が多いのですが、時間がなかったということでお目こぼしをお願いしますmm
 ### 皆さんのアイディア
 皆さんのプログラムを見せてもらったのですが、とても面白かったし、笑いました。
 
