--- a/nmp300.hatenablog.com/entry/2020/09/13/144443.md
+++ b/nmp300.hatenablog.com/entry/2020/09/13/144443.md
@@ -1,12 +1,13 @@
 ---
-Title: ■
+Title: 『エンジニアのための時間管理術』を読みました
+Category:
+- Programmer
+- 読書ノート
 Date: 2020-09-13T14:44:43+09:00
 URL: https://docs.koheitakahashi.com/entry/2020/09/13/144443
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613627284038
-Draft: true
 ---
 
-# 『エンジニアのための時間管理術』読みました
 ## はじめに
 研修中ではありますが、エンジニアとして業務に当たっていく中で「中々開発速度が上がらない」と思うようになりました。
 
@@ -14,6 +15,10 @@ Draft: true
 
 そこで、「自分の時間管理・仕事の進め方」を見直したいと思い、本書を手に取りました。  
 早速実践できたこともあるので、以下に学んだことや感想をまとめたいと思います。
+
+
+[https://bookmeter.com/books/21156:embed:cite]
+
 
 ## 本書の章立て
 本書は以下のような章立てで構成されていました。
@@ -109,7 +114,7 @@ Draft: true
 
 上記のようなことが、サイクルシステム(作業リストとスケジュール)を用いた時間管理術でした。
 
-一見目新しいものはないように思えます。  
+最初見た時に、一見目新しいものはないように見えました。  
 しかし、後述しますが、私は実際にやってみて「良い感じかもしれない」という感覚がありました。
 ### 第6章 サイクルシステム: カレンダーの管理
 仕事とプライベートのカレンダーを1つにまとめようということが述べられていた章でした。
@@ -123,7 +128,8 @@ Draft: true
 ### 第8章 優先順位
 タスクやプロジェクトに対して、どのようにして優先順位をつけていくのかということがまとめられた章でした。
 
-本章の内容としては、顧客が優先する順位を割り振ること。そして、タスクやプロジェクトを達成した時の効果(大・小)と困難さ(難・易)の2つの軸で見た時に効果が大きく・易しいモノからこなしていくというものでした。 
+本章の内容としては、顧客が優先する順位を割り振ること。そして、タスクやプロジェクトを達成した時の効果(大・小)と困難さ(難・易)の2つの軸で見た時に効果が大きく・易しいモノからこなしていくというものでした。
+
 しかし、上記のようなタスクはほとんどないので、その場合は効果が大きく、難しいモノをやっていく方が良いと述べられていました。
 
 この章は、顧客の方を意識する機会が私にはまだないので、あまり実感を持って理解できませんでした。  
