『メタプログラミングRuby』の記事において、lintの指摘箇所を修正・推敲

--- a/nmp300.hatenablog.com/entry/2020/09/26/162100.md
+++ b/nmp300.hatenablog.com/entry/2020/09/26/162100.md
@@ -8,9 +8,9 @@ Draft: true
 
 ## はじめに
 Rubyを学び始めてから1年弱になるものの、なんとなくRubyを書いている感が否めませんでした。  
-そして、どうもRubyを使っているのではなく、Rubyに使われているという状態でした。
+そして、Rubyを使っているのではなく、Rubyに使われているという状態です。
 
-もっと、Rubyを理解してRubyを使いこなしたいと思い、Rubyをより理解するために本書を手に取りました。
+「Rubyを理解してRubyを使いこなしたい」と思い、Rubyをより理解するために本書を手に取りました。
 
 学んだこと、感想をまとめます。
 
