ActionCable の解説記事で、WebSocket と pub/sub モデルの概念を混同して記述していたため修正。

--- a/nmp300.hatenablog.com/entry/2020/08/20/124333.md
+++ b/nmp300.hatenablog.com/entry/2020/08/20/124333.md
@@ -74,13 +74,14 @@ Sec-WebSocket-Protocol: chat
 ## ActionCableが実現しているWebSocket通信の世界観
 ハンドシェイクが正常に処理されて、WebSocketプロトコルに移行した後のデータのやりとりを見ていきます。
 
-WebSocketの中には以下のような3つの概念があります。
+ActionCable は pub/sub モデルというメッセージ送受信のモデルを採用しており、そのモデルに則ってデータがやりとりされる形になります。
+pub/sub モデルの主要な概念は以下の3つです。
 
 - サーバーから送られるデータ
 - クライアントであるconsumer
 - 実際にデータがやりとりされる空間であるchannel
 
-[![Image from Gyazo](https://i.gyazo.com/5e8aad5ca7f00383c0c7fb795a682c6f.png)](https://gyazo.com/5e8aad5ca7f00383c0c7fb795a682c6f)
+[![Image from Gyazo](https://i.gyazo.com/14bd5206c30b5e72381cd75c488fac34.png)](https://gyazo.com/14bd5206c30b5e72381cd75c488fac34)
 
 ここで、consumerがchannelと繋がることをsubscribeといいます。  
 subscribeしたら、consumerはsubscriberと呼ばれることとなります。
@@ -216,3 +217,6 @@ consumer.subscriptions.create({ channel: "TimelinesChannel" },
 - [Railsガイド Action Cable の概要](https://railsguides.jp/action_cable_overview.html)
 - [Wikipedia WebSocket](https://ja.wikipedia.org/wiki/WebSocket)
 - [RFC 6455 - The WebSocket Protocol](https://triple-underscore.github.io/RFC6455-ja.html)
+
+## 追記
+- 2020.11.08 WebSocket と pub/sub モデルの概念を混同して説明していたため修正。
