--- a/nmp300.hatenablog.com/entry/2021/01/31/152704.md
+++ b/nmp300.hatenablog.com/entry/2021/01/31/152704.md
@@ -1,12 +1,13 @@
 ---
-Title: ■
+Title: 見積もり関連のことで最近失敗したことと、そこから学んだこと
+Category:
+- TIL
+- Programmer
 Date: 2021-01-31T15:27:04+09:00
 URL: https://docs.koheitakahashi.com/entry/2021/01/31/152704
 EditURL: https://blog.hatena.ne.jp/NMP300/nmp300.hatenablog.com/atom/entry/26006613685395384
-Draft: true
 ---
 
-# 見積もり関連のことで失敗したことと、そこから学んだこと
 ## はじめに
 年明けから従事しているプロジェクトで、初めて開発チームのマネージャー的な役割を少しだけ担うこととなりました。  
 社の方々に多大なサポートをいただきながら、自分なりに考えてなんとかやってはいるものの、マネージャー的役割が初めての経験ということもあり色々と失敗しました。
